0030562: Coding - TopOpeBRepBuild_Builder use of null pointer

TopOpeBRepBuild_Builder::Clear() - added NULL check.